# electronic-projects

./: .gitignore  README.md
211-SE-Amp/: Measurmenet 211.xls  Partlist.xls  Protokol.txt  partlist new.xls
Irmp-2/: README.txt  irmp-main-SharedLib.c  irmp-main-avr-mitsu-heavy.c  irmp-main-avr-uart.c  irmp-main-avr.c  irmp-main-chibios.c  irmp-main-esp8266.c  irmp-main-mbed.cpp  irmp-main-pic-12F1840.c  irmp-main-pic-xc8.c  irmp-main-stellaris-arm.c  irmp-main-stm32.c  irmpconfig.h  irmpextlog.c
alps-adapter-v1/: alps-adapter.kicad_pcb  fp-info-cache
hp-6614C-cs-fix/: main.c
hv-power-supply-v1/: _autosave-hv-power-supply-v1.sch  fp-info-cache  hv-power-supply-v1  hv-power-supply-v1-Bom.xlsx  hv-power-supply-v1-cache.lib  hv-power-supply-v1-rescue.lib  hv-power-supply-v1.kicad_pcb  hv-power-supply-v1.pro  hv-power-supply-v1.sch
hv-power-supply-v1c/: fp-info-cache  hv-power-supply-v1.sch
hv-power-supply-v1d/: fp-lib-table  hv-power-supply-v1.kicad_pcb  hv-power-supply-v1.sch  sym-lib-table
hv-power-supply-v2/: fp-info-cache  hv-power-supply-cache.lib  hv-power-supply-v1  hv-power-supply-v1-cache.lib  hv-power-supply-v1.kicad_pcb  hv-power-supply-v1.pro  hv-power-supply-v1.sch  hv-power-supply.kicad_pcb  hv-power-supply.pro  hv-power-supply.sch
hv-power-supply-v2a/: hv-power-supply-cache.lib  hv-power-supply.kicad_pcb  hv-power-supply.sch
input-sel-v1/: fp-info-cache  fp-lib-table  input-sel-v1-cache.lib  input-sel-v1.kicad_pcb  input-sel-v1.pro  input-sel-v1.sch
input-sel-v1a/: fp-info-cache  input-sel-v1-cache.lib  input-sel-v1.kicad_pcb  input-sel-v1.sch
input-sel-v2/: fp-lib-table  input-sel-v1-cache.lib  input-sel-v1.kicad_pcb  input-sel-v1.sch
kicad-lib-snk/: .gitignore  Linear Technology.kicad_sym  SOD64-10.kicad_mod  TE-726386-2_Pitch5.08mm_Drill1.3mm.step  TRIM_RK27112A0S20C0A103.kicad_mod  TubeOctal_8PRK.kicad_mod  kicad-snk.bck  kicad-snk.dcm  kicad-snk.kicad_sym  kicad-snk.lib  w_vacuum.kicad_sym
kicad-psu-ceramic-v6/: dac-psu.kicad_pcb
lt1115-phono-mm-mc-v1/: lt1115-phono-mm-mc-cache.lib  lt1115-phono-mm-mc.kicad_pcb  lt1115-phono-mm-mc.pro  lt1115-phono-mm-mc.sch  lt1115-phono-mm-mc.sch-bak
lt1115-phono-mm-mc-v2/: lt1115-phono-mm-mc.kicad_pcb  lt1115-phono-mm-mc.pro  lt1115-phono-mm-mc.sch
lt1115-phono-mm-mc-v3/: fp-info-cache  lt1115-phono-mm-mc.kicad_pcb  lt1115-phono-mm-mc.kicad_sch  lt1115-phono-mm-mc.sch  sym-lib-table
lv-lownoise-psu-to-220-v2c/: lv-lownoise-psu-cache.lib  lv-lownoise-psu.kicad_pcb  lv-lownoise-psu.sch
lv-lownoise-psu-v1/: lv-lownoise-psu-cache.lib  lv-lownoise-psu.kicad_pcb  lv-lownoise-psu.pro  lv-lownoise-psu.sch
lv-lownoise-psu-v1a/: lv-lownoise-psu.kicad_pcb  lv-lownoise-psu.pro  lv-lownoise-psu.sch
lv-lownoise-psu-v2/: lv-lownoise-psu-cache.lib  lv-lownoise-psu.kicad_pcb  (+2 more)
retro/one-rom/rust/: Cargo.toml
retro/one-rom/rust/config/: .gitignore  Cargo.toml  README.md  publish.sh
retro/one-rom/rust/config/json/: README.md  fire-24-a.json  fire-24-usb-b.json  ice-24-d.json  ice-24-e.json  ice-24-f.json  ice-24-g.json  ice-24-usb-h.json  ice-28-a.json  rom-types.json
retro/one-rom/rust/config/json/user/: README.md
retro/one-rom/rust/config/src/: fw.rs  lib.rs  mcu.rs
retro/one-rom/rust/config/src/hw/: README.md
retro/one-rom/rust/config/src/rom/: .gitignore  README.md
retro/one-rom/rust/config/tests/: rom_generated_tests.rs  rom_validation_tests.rs
retro/one-rom/rust/database/: Cargo.toml  README.md  build.rs
retro/one-rom/rust/database/src/: lib.rs  types.rs
retro/one-rom/rust/fw/: Cargo.toml  README.md
retro/one-rom/rust/fw/src/: args.rs  error.rs  lib.rs  main.rs  net.rs
retro/one-rom/rust/lab/: Cargo.toml  README.md  build.rs
retro/one-rom/rust/lab/.cargo/: config.toml
retro/one-rom/rust/lab/ci/: check.sh
retro/one-rom/rust/lab/scripts/: url_checksum.py
retro/one-rom/rust/lab/src/: control.rs  error.rs  info.rs  logs.rs  main.rs  rom.rs  types.rs
retro/one-rom/rust/protocol/: Cargo.toml  README.md
retro/one-rom/rust/protocol/src/: lab.rs  lib.rs
retro/one-rom/rust/schema-gen/: Cargo.toml
retro/one-rom/rust/schema-gen/src/: main.rs
retro/one-rom/rust/sdrr-check/: Cargo.toml  README.md  build.rs
retro/one-rom/rust/sdrr-check/.cargo/: config.toml
retro/one-rom/rust/sdrr-check/src/: main.rs
retro/one-rom/rust/sdrr-fw-parser/: Cargo.toml  README.md
retro/one-rom/rust/sdrr-fw-parser/src/: info.rs  lab.rs  lib.rs  parsing.rs  readers.rs  types.rs
retro/one-rom/rust/sdrr-gen/: Cargo.toml  README.md
retro/one-rom/rust/sdrr-gen/src/: args.rs  config.rs  file.rs  fw.rs  generator.rs  main.rs
retro/one-rom/rust/sdrr-info/: Cargo.toml  README.md
retro/one-rom/rust/sdrr-info/src/: args.rs  load.rs  main.rs  utils.rs
retro/one-rom/rust/sdrr-tester/: Cargo.toml  README.md  build.rs  memory.x
retro/one-rom/rust/sdrr-tester/.cargo/: config.toml
retro/one-rom/rust/sdrr-tester/src/: asm.rs  asm.s  constants.rs  lib.rs  main.rs  statistics.rs
retro/one-rom/rust/studio/: CHANGELOG.md  Cargo.toml  LICENSE.txt  Packager.toml  README.md  build.rs
retro/one-rom/rust/studio/assets/: onerom-dmg.xcf
retro/one-rom/rust/studio/assets/onerom-liquid-glass-icons/: Assets.car
retro/one-rom/rust/studio/assets/onerom-liquid-glass.icon/: icon.json
retro/one-rom/rust/studio/manifest/: app-schema.json  sample-studio.json
retro/one-rom/rust/studio/scripts/: 70-onerom-studio.rules  build-linux.sh  build-mac.sh  build-win.ps1  create-dmg.py  create-mac-icon-ac.sh  release.py  requirements.txt  sign-win.ps1
retro/one-rom/rust/studio/scripts/linux/: onerom-studio.desktop
retro/one-rom/rust/studio/scripts/linux/maintainer/: postinst  postrm
retro/one-rom/rust/studio/src/: built.rs  config.rs  hw.rs  image.rs  lib.rs  log.rs  studio.rs  style.rs
retro/one-rom/rust/studio/src/analyse/: device.rs  file.rs  mod.rs  msg.rs  view.rs
retro/one-rom/rust/studio/src/app/: manifest.rs  mod.rs
retro/one-rom/rust/studio/src/create/: build.rs  file.rs  hw.rs  mod.rs  msg.rs  view.rs
retro/one-rom/rust/studio/src/device/: mod.rs  msg.rs  probe.rs  usb.rs  view.rs
(+4874 files in other folders)
