# Workspace configuration for the Rust elements of the One ROM project
[workspace]
members = [
    "config",
    "database",
    "fw",
    "gen",
    "lab",
    "protocol",
    "schema-gen",
    "sdrr-check",
    "sdrr-fw-parser",
    "sdrr-gen",
    "sdrr-info",
    "studio"
]
default-members = [
    "config",
    "sdrr-fw-parser",
    "sdrr-gen",
    "sdrr-info"
]
resolver = "2"

[profile.release]
opt-level = 3
#lto = true
codegen-units = 1
strip = true
panic = "abort"
