[package]
name = "onerom-fw"
version = "0.1.2"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
license = "MIT"
description = "Firmware generator for One ROM - the flexible retro ROM replacement"
repository = "https://github.com/piersfinlayson/one-rom"
homepage = "https://onerom.org"
documentation = "https://docs.rs/onerom-gen"
keywords = ["retro", "rom", "commodore", "embedded"]
categories = ["embedded", "hardware-support"]

[lib]
name = "onerom_fw"
path = "src/lib.rs"

[[bin]]
name = "onerom-fw"
path = "src/main.rs"

[dependencies]
onerom-config = { version = "0.2.2" }
onerom-gen = { version = "0.2.0" }

bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "blocking", "rustls-tls"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
zip = "6.0"
