[package]
name = "sdrr-check"
version = "0.4.2"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "One ROM manufacturing check tool"
repository = "https://github.com/piersfinlayson/one-rom"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[[bin]]
name = "sdrr-check"
path = "src/main.rs"

[features]
default = [ "embassy-stm32/stm32f405rg", "hw-24-f" ]
hw-24-f = []

[dependencies]
defmt = { version = "1.0" }
embassy-executor = { version = "0.7.0   ", features = ["executor-thread", "arch-cortex-m", "defmt", "nightly" ]}
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-stm32 = { version = "0.4.0", features = [ "memory-x", "time-driver-any", "unstable-pac", "exti" ]}
embassy-time = { version = "0.5", features = [ "tick-hz-32_768", "defmt", "generic-queue-8" ] }
portable-atomic = { version = "1.10", features = [ "critical-section" ] }
cortex-m = { version = "0.7.6", features = [ "critical-section-single-core" ] }
cortex-m-rt = { version = "0.7.0"}
panic-probe = { version = "1.0", features = [ "print-defmt" ]}
static_cell = { version = "2.1", features = [ "nightly" ] }
defmt-rtt = { version = "1.0"}
embedded-alloc = "0.6"
embedded-hal = { version = "1.0.0"}
critical-section = { version = "1.2.0" }
