[package]
name = "sdrr-fw-parser"
version = "0.5.4"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "One ROM firmware parser"
repository = "https://github.com/piersfinlayson/one-rom"
readme = "README.md"
license = "MIT"
keywords = ["commodore", "sdrr", "rom", "eprom", "flash"]
categories = ["parsing", "embedded", "hardware-support", "no-std", "development-tools"]

[features]
default = ["std"]
std = ["deku/std"]
esp32 = []

[dependencies]
onerom-config = { version = "0.2.2" }
onerom-gen = { version = "0.2.0" }

airfrog-rpc = { version = "0.1.0" }
deku = { version = "0.19", default-features = false, features = ["alloc"] }
esp-println = { version = "0.15", features = ["esp32c3", "log-04"], optional = true }
log = "0.4"
static_assertions = "1.1"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
