[package]
name = "sdrr-info"
version = "0.5.1"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Generates information from One ROM firmware elf files"
repository = "https://github.com/piersfinlayson/one-rom"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.42", features = ["derive"] }
goblin = "0.10"
smol = "2.0"

sdrr-fw-parser = { path = "../sdrr-fw-parser", version = "0.5.4", features = ["std"] }
